--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,7 +47,8 @@ jobs:
             playbook: converge.yml
           - distro: debian11
             playbook: converge.yml
-
+          - distro: debian11
+            playbook: cilium.yml
           - distro: debian11
             playbook: calico.yml
 
