feat: simplify to actual use case

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,3 +1,18 @@
 ---
 - name: restart kubelet
-  service: name=kubelet state=restarted
+  ansible.builtin.systemd:
+    name: kubelet
+    state: restarted
+    daemon_reload: true
+
+- name: restart keepalived
+  ansible.builtin.systemd:
+    name: keepalived
+    state: restarted
+    enabled: true
+
+- name: restart haproxy
+  ansible.builtin.systemd:
+    name: haproxy
+    state: restarted
+    enabled: true
