--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,70 +1,35 @@
 ---
-kubernetes_packages:
-  - name: kubelet
-    state: present
-  - name: kubectl
-    state: present
-  - name: kubeadm
-    state: present
-  - name: kubernetes-cni
-    state: present
+# Kubernetes component versions and configuration
+k8s_version: '1.28'
+k8s_api_server_port: 6443
+k8s_allow_pods_on_control_plane: true
+k8s_private_ip: "{{ ansible_default_ipv4.address }}"
 
-kubernetes_version: '1.25'
-kubernetes_version_rhel_package: '1.25.1'
-kubernetes_cilium_version: '1.14.5'
-kubernetes_cilium_datapath: 'native'
-kubernetes_cilium_hubble_client: false
-kubernetes_cilium_values: ""
+# High-availability configuration using Keepalived and HAProxy
+k8s_ha_enabled: true
+k8s_ha_api_vip: '192.168.33.10'
+k8s_ha_api_port: 6443
+k8s_ha_interface: 'eth1'
+k8s_ha_router_id: 51
+k8s_ha_health_check_script: /usr/local/bin/k8s_api_health_check.sh
 
-kubernetes_role: control_plane
+# Cilium CNI configuration
+k8s_cilium_version: '1.15.5'
+k8s_cilium_helm_values:
+  kubeProxyReplacement: true
+  gatewayAPI:
+    enabled: true
+  hubble:
+    relay:
+      enabled: true
+    ui:
+      enabled: true
 
-# This is deprecated. Please use kubernetes_config_kubelet_configuration instead.
-kubernetes_kubelet_extra_args: ""
+# Kubeadm configuration objects
+k8s_kubelet_config:
+  cgroupDriver: systemd
+  failSwapOn: false # Recommended to be true in production
 
-kubernetes_kubeadm_init_extra_opts: ""
-kubernetes_join_command_extra_opts: ""
-kubernetes_allow_pods_on_control_plane: true
-kubernetes_pod_network:
-  # Flannel CNI.
-  cni: 'flannel'
-  cidr: '10.244.0.0/16'
-  # Calico CNI.
-  # cni: 'calico'
-  # cidr: '192.168.0.0/16'
-
-kubernetes_kubeadm_kubelet_config_file_path: '/etc/kubernetes/kubeadm-kubelet-config.yaml'
-kubernetes_config_kubelet_configuration:
-  cgroupDriver: "systemd"
-
-kubernetes_config_init_configuration:
-  localAPIEndpoint:
-    advertiseAddress: "{{ kubernetes_apiserver_advertise_address | default(ansible_default_ipv4.address, true) }}"
-# if you use the next lines, remove the command line argument below
-# nodeRegistration:
-#    ignorePreflightErrors:
-#      - all
-
-kubernetes_config_cluster_configuration:
-  networking:
-    podSubnet: "{{ kubernetes_pod_network.cidr }}"
-  kubernetesVersion: "{{ kubernetes_version_kubeadm }}"
-
-kubernetes_config_kube_proxy_configuration: {}
-
-kubernetes_apiserver_advertise_address: ''
-kubernetes_version_kubeadm: 'stable-{{ kubernetes_version }}'
-kubernetes_ignore_preflight_errors: 'all'
-
-kubernetes_apt_release_channel: "stable"
-kubernetes_apt_repository: "https://pkgs.k8s.io/core:/{{ kubernetes_apt_release_channel }}:/v{{ kubernetes_version }}/deb/"
-
-kubernetes_yum_base_url: "https://pkgs.k8s.io/core:/stable:/v{{ kubernetes_version }}/rpm/"
-kubernetes_yum_gpg_key: "https://pkgs.k8s.io/core:/stable:/v{{ kubernetes_version }}/rpm/repodata/repomd.xml.key"
-kubernetes_yum_gpg_check: true
-kubernetes_yum_repo_gpg_check: true
-
-# Flannel config file.
-kubernetes_flannel_manifest_file: https://raw.githubusercontent.com/flannel-io/flannel/master/Documentation/kube-flannel.yml
-
-# Calico config file.
-kubernetes_calico_manifest_file: https://projectcalico.docs.tigera.io/manifests/calico.yaml
+# OS-specific package names
+procps_package_debian: procps
+procps_package_redhat: procps-ng
