--- a/tasks/control-plane.yml
+++ b/tasks/control-plane.yml
@@ -68,17 +68,19 @@
     k8s_join_command_worker: "{{ k8s_join_command_worker_raw.stdout }}"
   run_once: true
 
-- name: Install Cilium
-  ansible.builtin.include_tasks: cilium.yml
+- name: Install Cilium on the first control plane node
+  block:
+    - ansible.builtin.include_tasks: cilium.yml
   run_once: true
   delegate_to: "{{ groups['k8s_control_plane'][0] }}"
   when: not k8s_admin_conf.stat.exists
 
 - name: Untaint control plane nodes to allow pod scheduling
-  ansible.builtin.command: "kubectl taint nodes {{ inventory_hostname }} node-role.kubernetes.io/control-plane-"
+  ansible.builtin.command: "kubectl taint nodes {{ item }} node-role.kubernetes.io/control-plane-"
   register: taint_removed
   changed_when: "'untainted' in taint_removed.stdout"
   failed_when: taint_removed.rc != 0 and 'not found' not in taint_removed.stderr
   when: k8s_allow_pods_on_control_plane
-  run_once: true # Tainting is a cluster-wide operation, but we run it on each node for idempotency
+  run_once: true
   delegate_to: "{{ groups['k8s_control_plane'][0] }}"
+  loop: "{{ groups['k8s_control_plane'] }}"
