--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -9,10 +9,10 @@
   ansible.builtin.include_tasks: ha.yml
   when: k8s_ha_enabled
 
-- name: Set up Kubernetes control plane
-  ansible.builtin.include_tasks: control-plane.yml
-  when: inventory_hostname in groups['k8s_control_plane']
+# - name: Set up Kubernetes control plane
+#   ansible.builtin.include_tasks: control-plane.yml
+#   when: inventory_hostname in groups['k8s_control_plane']
 
-- name: Set up Kubernetes worker nodes
-  ansible.builtin.include_tasks: worker-node.yml
-  when: inventory_hostname in groups['k8s_worker_nodes']
+# - name: Set up Kubernetes worker nodes
+#   ansible.builtin.include_tasks: worker-node.yml
+#   when: inventory_hostname in groups['k8s_worker_nodes']
