--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,22 +1,22 @@
 ---
 # Kubernetes component versions and configuration
-k8s_version: 1.33
-k8s_version_minor: 2
-k8s_api_server_port: 6443
-k8s_allow_pods_on_control_plane: true
-k8s_private_ip: "{{ ansible_default_ipv4.address }}"
+kubernetes_version: "1.33"
+kubernetes_api_server_internal_port: 6443 # The port the actual API server binds to on each control plane node
+kubernetes_allow_pods_on_control_plane: true
+kubernetes_private_ip: "{{ ansible_default_ipv4.address }}" # The private IP of the node for internal communication
 
 # High-availability configuration using Keepalived and HAProxy
-k8s_ha_enabled: true
-k8s_ha_api_vip: '192.168.33.10'
-k8s_ha_api_port: 6443
-k8s_ha_interface: 'eth1'
-k8s_ha_router_id: 51
-k8s_ha_health_check_script: /usr/local/bin/k8s_api_health_check.sh
+kubernetes_ha_enabled: true
+kubernetes_ha_api_vip: "11.0.8.10" # The Virtual IP for the Kubernetes API server
+kubernetes_ha_api_port: 6443
+kubernetes_ha_interface: "eth1"
+kubernetes_ha_router_id: 51
+kubernetes_ha_health_check_script: /usr/local/bin/kubernetes_api_health_check.sh
 
 # Cilium CNI configuration
-k8s_cilium_version: '0.18.4'
-k8s_cilium_helm_values:
+kubernetes_cilium_version: "1.17.5"
+kubernetes_cilium_cli_version: "0.18.4"
+kubernetes_cilium_helm_values:
   kubeProxyReplacement: true
   gatewayAPI:
     enabled: true
@@ -26,11 +26,12 @@ k8s_cilium_helm_values:
     ui:
       enabled: true
 
-# Kubeadm configuration objects
-k8s_kubelet_config:
+# Kubeadm configuration objects (these will be merged with user-provided values)
+kubernetes_config_init_configuration: {}
+kubernetes_config_cluster_configuration: {}
+kubernetes_kubelet_config:
   cgroupDriver: systemd
   failSwapOn: false # Recommended to be true in production
 
-# OS-specific package names
-procps_package_debian: procps
-procps_package_redhat: procps-ng
+# Deprecated: Extra args for kubelet. Values will be parsed and integrated into kubernetes_kubelet_config.
+kubernetes_kubelet_extra_args: ""
