--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,18 +1,7 @@
 ---
-- name: restart kubelet
+- name: Restart kubelet
   ansible.builtin.systemd:
     name: kubelet
     state: restarted
     daemon_reload: true
 
-- name: restart keepalived
-  ansible.builtin.systemd:
-    name: keepalived
-    state: restarted
-    enabled: true
-
-- name: restart haproxy
-  ansible.builtin.systemd:
-    name: haproxy
-    state: restarted
-    enabled: true
