--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,18 +1,11 @@
 ---
-- name: Include OS-specific variables
-  ansible.builtin.include_vars: "{{ ansible_os_family }}.yml"
-
 - name: Perform prerequisite setup
   ansible.builtin.include_tasks: prereq.yml
 
-
 - name: Set up Kubernetes control plane
   ansible.builtin.include_tasks: control-plane.yml
-  when: inventory_hostname in groups['k8s_control_plane']
+  when: inventory_hostname in groups['kubernetes_control_plane']
 
 - name: Set up Kubernetes worker nodes
   ansible.builtin.include_tasks: worker-node.yml
-  when: inventory_hostname in groups['k8s_worker_nodes']
-
-- name: Flush handlers to apply network changes
-  ansible.builtin.meta: flush_handlers
+  when: inventory_hostname in groups['kubernetes_worker_nodes']
