--- a/tasks/worker-node.yml
+++ b/tasks/worker-node.yml
@@ -2,8 +2,8 @@
 - name: Check if node is already joined
   ansible.builtin.stat:
     path: /etc/kubernetes/kubelet.conf
-  register: k8s_kubelet_conf
+  register: kubernetes_kubelet_conf
 
 - name: Join worker node to cluster
-  ansible.builtin.command: "{{ hostvars[groups['k8s_control_plane'][0]].k8s_join_command_worker }}"
-  when: not k8s_kubelet_conf.stat.exists
+  ansible.builtin.command: "{{ hostvars[groups['kubernetes_control_plane'][0]].kubernetes_join_command_worker }}"
+  when: not kubernetes_kubelet_conf.stat.exists
